New formatting rules, formatted all java code